# project_Nurilab

./: .gitignore  AGENTS.md  AI_RULES.md  AI_RULES_KOR.md  CONTRIBUTING.md  FINETUNING_EXPERIMENT_PLAN.md  README.md  SGLANG_VLLM_COMPARISON.md  main.py  pyproject.toml
.ai_rules/: cli.md  global.md  pipeline.md  schemas.md
.ai_rules/analyzers/: patterns.md  python_static.md  secrets.md
.ai_rules/llm/: review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
data/samples/: test_1.py  test_2.py
docs/: AI_RULES.md  AI_RULES_KOR.md  CONTRIBUTING.md  FINETUNING_EXPERIMENT_PLAN.md  PLAN.md  PR_DESCRIPTION.md  external_project_validation.md
project_nurilab/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
project_nurilab/aggregation/: __init__.py  result_aggregator.py
project_nurilab/analyzers/: __init__.py  patterns.py  python_static.py  secrets.py  tools.py
project_nurilab/input/: collector.py  manager.py
project_nurilab/llm/: __init__.py  review.py
project_nurilab/reports/: generator.py
tests/: test_cli.py  test_input_collector.py  test_pipeline.py  test_python_static_analyzer.py  test_review_and_report.py  test_tools_and_llm.py
tests/fixtures/: clean_sample.py  vulnerable_sample.py
tests/fixtures/mixed_risk_project/: hardcoded_secret.py  mixed_clean.py  suspicious_call.py
tests/fixtures/review_quality/: clean_baseline_sample.py  dynamic_execution_sample.py  hardcoded_secret_sample.py  network_access_sample.py  unsafe_deserialization_sample.py
tests/fixtures/review_quality_project/: dynamic_execution.py  (+3 more)
